src/main/java/com/example/coupon/domain/errors/AllCouponUsed.java
package com.example.coupon.domain.errors;

public class AllCouponUsed extends RuntimeException{
}
